# rust-sequential-stat-collector

./: .gitignore  Cargo.toml  README.md
src/: main.rs  message.proto  message.rs
