[package]
name = "rust-sequential-stat-collector"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "stats"
path = "src/main.rs"

[dependencies]
postgres = "0.15.2"
rand = "0.6.5"
reqwest = "0.9.17"
serde_json = "1.0.39"
serde = "1.0.91"
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]