[package]
name = "rust-sequential-stat-collector"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "stats"
path = "src/main.rs"

[dependencies]
bytes = "0.4.12"
openssl-sys = "*"
postgres = "0.15.2"
prost = "0.4"
prost-derive = "0.4"
reqwest = "0.9.17"
serde_json = "1.0.39"
serde = "1.0.91"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]